--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -55,3 +55,23 @@ input {
     transition: box-shadow .5s ease;
 }
 input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
+
+footer{
+    background-color: white;
+}
+
+.container{
+    width: 40%;
+    background-color: white;
+    padding:5%;
+}
+.container .img{
+    text-align:center;
+}
+.container .details{
+    border-left:3px solid #ded4da;
+}
+.container .details p{
+    font-size:15px;
+    font-weight:bold;
+}
