--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -76,32 +76,15 @@ footer{
     font-weight:bold;
 }
 
-#exTab1 .tab-content {
-    color : white;
-    background-color: #428bca;
-    padding : 5px 15px;
+[class*="row"] {
+    margin-bottom: 1em;
+    justify-content: center;
 }
 
-#exTab2 h3 {
-    color : white;
-    background-color: #428bca;
-    padding : 5px 15px;
-}
-
-/* remove border radius for the tab */
-
-#exTab1 .nav-pills > li > a {
-    border-radius: 0;
-}
-
-/* change border radius for the tab , apply corners on top*/
-
-#exTab3 .nav-pills > li > a {
-    border-radius: 4px 4px 0 0 ;
-}
-
-#exTab3 .tab-content {
-    color : white;
-    background-color: #428bca;
-    padding : 5px 15px;
+[class*="col-"] {
+    background: #efefef;
+    border: 1px solid #ddd;
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    width: 100%;
 }
